# pinenote_dbus_service

./: COPYING  Cargo.toml  README.md  Readme.md
dbus_security_configuration/: pinenote.conf
debian/: changelog  copyright
examples/gjs/: trigger_global_refresh.js
examples/python/: trigger_global_refesh.py
examples/rust/ioctl_1/ebc_ioctls/: Cargo.toml
examples/rust/ioctl_1/ebc_ioctls/src/: main.rs
examples/shell_dbus-send/: interfacing_via_dbus-send.sh
packaging_debian/: crossroads_debcargo.toml  package_crossroads.sh  package_pinenote_dbus_service.sh  pns_debcargo.toml
packaging_debian/overlay_crossroads/: changelog  copyright  copyright.debcargo.hint
packaging_debian/overlay_pinenote_dbus_service/: changelog  copyright  copyright.debcargo.hint  pinenote-dbus-service.install
src/: ebc_ioctl.rs  main.rs  sys_handler.rs  usb_modes.rs
systemd_units/: pinenote_dbus_service.service
